tests/errors/early_return_null_list_element_type_mismatch.dang
# Early return values must preserve nested non-null requirements
pub bad(): [Int!]! {
  return [null]
  []
}
